# seichi-game-data-publisher

./: .gitignore  Dockerfile  README.md
.github/workflows/: build-and-release-application.yaml
server/: .gitignore  Cargo.toml  buf.gen.yaml  build.rs
server/src/: main.rs
