[package]
name = "seichi-game-data-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
# pbjson-types, prost, tonic, tonic-prost は `<= 1.0.0` の範囲でminor versionが上がった場合全て一緒にbumpすること。buf.gen.yamlの
# バージョンをあげることも忘れずに。

axum = "0.8.0"
async-trait = "0.1.68"
pbjson-types = "0.9.0"
prost = "0.14.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.14.0", features = ["gzip"] }
tonic-prost = "0.14.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
anyhow = "1.0.82"
envy = "0.4.2"
serde = "1.0.198"
tower-http = { version = "0.6.0", features = ["trace"] }
indexmap = "2.0.0"

# Observability stack. Configured at runtime through OTEL_* / PYROSCOPE_*
# environment variables; if unset, the exporters stay disabled and the binary
# falls back to plain stdout logging.
init-tracing-opentelemetry = { version = "0.37", features = ["otlp", "tracing_subscriber_ext", "tracer", "metrics", "logs", "tls-webpki-roots"] }
# tracing_level_info raises the middleware span level from TRACE to INFO.
# Without it the inbound HTTP SERVER span is emitted at TRACE and the resource
# attributes propagated through the OTel pipeline can suppress it under some
# subscriber configurations. Upstream issue:
# https://github.com/davidB/tracing-opentelemetry-instrumentation-sdk/issues/330
axum-tracing-opentelemetry = { version = "0.33", features = ["tracing_level_info"] }
tonic-tracing-opentelemetry = { version = "0.32", features = ["tracing_level_info"] }
opentelemetry = "0.31"
tower = "0.5"
pyroscope = { version = "2.0", features = ["backend-pprof-rs"] }
